deploy: 49280b81df3bb7e991ea27235e518d9f47976271

--- a/03_files.html
+++ b/03_files.html
@@ -770,12 +770,12 @@ const thebe_selector_output = ".output, .cell_output"
 </div></div></div>
 </div>
 <p>If you get an error that looks like this:</p>
-<p><img alt="booknlp_error.PNG" src="attachment:6319c06f-a548-4f8f-a529-b499c3526049.PNG" /></p>
+<p><img alt="images/booknlp_error.PNG" src="attachment:6319c06f-a548-4f8f-a529-b499c3526049.PNG" /></p>
 <p>Fear not! This happens sometimes when the .entities file is corrupted with something like a ” mark. You simply need to go into the file and remove the character that is causing the error. Use the row number as an indicator of where to go in the text file. Remember, add one row because row 1 is the header data.</p>
 <p>Before:
-<img alt="booknlp_solution.PNG" src="attachment:6089ea0b-cf6a-4e1b-bb38-09358eaff2c7.PNG" /></p>
+<img alt="images/booknlp_solution.PNG" src="attachment:6089ea0b-cf6a-4e1b-bb38-09358eaff2c7.PNG" /></p>
 <p>After:
-<img alt="booknlp_solution2.PNG" src="attachment:f87e4329-e6a4-4276-a453-7764ed688733.PNG" /></p>
+<img alt="images/booknlp_solution2.PNG" src="attachment:f87e4329-e6a4-4276-a453-7764ed688733.PNG" /></p>
 <p>Let’s return to our data.</p>
 <div class="cell docutils container">
 <div class="cell_input docutils container">
