--- a/template - Copy.html
+++ b/template - Copy.html
@@ -172,7 +172,7 @@ const thebe_selector_output = ".output, .cell_output"
         <!-- ipynb file if we had a myst markdown file -->
         
         <!-- Download raw file -->
-        <a class="dropdown-buttons" href="_sources/template - Copy-Copy1.ipynb"><button type="button"
+        <a class="dropdown-buttons" href="_sources/template - Copy.ipynb"><button type="button"
                 class="btn btn-secondary topbarbtn" title="Download source file" data-toggle="tooltip"
                 data-placement="left">.ipynb</button></a>
         <!-- Download PDF via print -->
@@ -192,10 +192,10 @@ const thebe_selector_output = ".output, .cell_output"
                 data-toggle="tooltip" data-placement="left" title="Source repository"><i
                     class="fab fa-github"></i>repository</button></a>
         <a class="issues-button"
-            href="https://github.com/wjbmattingly/youtube_booknlp/issues/new?title=Issue%20on%20page%20%2Ftemplate - Copy-Copy1.html&body=Your%20issue%20content%20here."><button
+            href="https://github.com/wjbmattingly/youtube_booknlp/issues/new?title=Issue%20on%20page%20%2Ftemplate - Copy.html&body=Your%20issue%20content%20here."><button
                 type="button" class="btn btn-secondary topbarbtn" data-toggle="tooltip" data-placement="left"
                 title="Open an issue"><i class="fas fa-lightbulb"></i>open issue</button></a>
-        <a class="edit-button" href="https://github.com/wjbmattingly/youtube_booknlp/edit/main/template - Copy-Copy1.ipynb"><button
+        <a class="edit-button" href="https://github.com/wjbmattingly/youtube_booknlp/edit/main/template - Copy.ipynb"><button
                 type="button" class="btn btn-secondary topbarbtn" data-toggle="tooltip" data-placement="left"
                 title="Edit this page"><i class="fas fa-pencil-alt"></i>suggest edit</button></a>
     </div>
@@ -215,7 +215,7 @@ const thebe_selector_output = ".output, .cell_output"
         aria-label="Launch interactive content"><i class="fas fa-rocket"></i></button>
     <div class="dropdown-buttons">
         
-        <a class="binder-button" href="https://mybinder.org/v2/gh/wjbmattingly/youtube_booknlp/main?urlpath=tree/template - Copy-Copy1.ipynb"><button type="button"
+        <a class="binder-button" href="https://mybinder.org/v2/gh/wjbmattingly/youtube_booknlp/main?urlpath=tree/template - Copy.ipynb"><button type="button"
                 class="btn btn-secondary topbarbtn" title="Launch Binder" data-toggle="tooltip"
                 data-placement="left"><img class="binder-button-logo"
                     src="_static/images/logo_binder.svg"
