deploy: fe0a8d9273040c04e0fcc8aa0eff7d06f27b8f65

--- a/04_character_analysis.html
+++ b/04_character_analysis.html
@@ -53,7 +53,7 @@ const thebe_selector_output = ".output, .cell_output"
     <script async="async" src="_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="next" title="5. Advanced Searching on Strings" href="05_events.html" />
+    <link rel="next" title="5. Events Analysis" href="05_events.html" />
     <link rel="prev" title="3. The Output Files" href="03_files.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="docsearch:language" content="None">
@@ -571,7 +571,7 @@ const thebe_selector_output = ".output, .cell_output"
     <a class='right-next' id="next-link" href="05_events.html" title="next page">
     <div class="prev-next-info">
         <p class="prev-next-subtitle">next</p>
-        <p class="prev-next-title"><span class="section-number">5. </span><center>Advanced Searching on Strings</center></p>
+        <p class="prev-next-title"><span class="section-number">5. </span><center>Events Analysis</center></p>
     </div>
     <i class="fas fa-angle-right"></i>
     </a>
